<resources>
    <string name="app_name">Flavorio App</string>

    <string name="curry1_description">Coconut Chicken Curry for lunch or\ndinner would be the best choice\nfor you.</string>

    <string name="curry1_ingredients">\t- 2 Tablespoons vegetable oil\n
- 1 - 2 lbs boneless, skinless chicken\n\t\tbreasts cut into strips\n
- Kosher salt\n
- 1 onion diced\n
- 1 red bell pepper cut into strips\n
- 1 cup sliced mushrooms\n
- 2 cloves garlic minced\n
- 2 Tablespoons grated fresh ginger\n
- 2 Tablespoons curry powder\n
- 1 Tablespoon granulated sugar\n
- Pinch red pepper flakes (optional)\n
- 1 13.5 ounce can full-fat coconut\n\t\t milk\n
- 1 cup chicken stock or water\n
- 1 cup snow peas\n
- 2 - 3 handfuls baby spinach\n
- Juice of one lime\n
- White or brown rice for serving
</string>

    <string name="curry1_instructions"> 1. Heat the oil in a large skillet\n over medium heat. Season the\n
        chicken with salt. Working in two\n batches, brown the chicken on all\n sides, about 5 minutes total. Transfer\n
        the chicken to a plate.\n\n
2. Add the onion, bell pepper, and\n mushrooms to the skillet. Cook,\n stirring, until the vegetables have\n
        softened and the onion is\n translucent, about 5 minutes. Add the\n garlic and ginger and cook for\n
        30 seconds. Add the curry powder,\n sugar, and red pepper flakes\n (if using), and stir to combine.\n\n
3. Stir in the coconut milk and\n chicken stock. Return the chicken\n and any juices to the skillet.\n
        Simmer until the chicken is cooked\n through, about 5 minutes. Stir in\n the snow peas and spinach and\n
        cook until the snow peas are\n bright green and the spinach has\n wilted, 2 to 3 minutes. Remove\n
        from the heat and stir in\n the lime juice.\n\n
4. Serve over rice.\n\n
</string>

    <string name="cake1_description">This chocolate cake recipe will \ndefinitely win your heart.</string>

    <string name="cake1_ingredients">For the cake\n
- 200g golden caster sugar\n
- 200g unsalted butter, softened plus\n\t\textra for the tins\n
- 4 large eggs\n
- 200g self-raising flour\n
- 2 tbsp cocoa powder\n
- 1 tsp baking powder\n
- ½ tsp vanilla extract\n
- 2 tbsp milk\n\n
For the buttercream\n
- 100g milk chocolate, chopped\n
- 200g butter, softened\n
- 400g icing sugar\n
- 5 tbsp cocoa powder\n
- 2 tbsp milk\n\n
For the chocolate shards (optional)\n
- 50g dark chocolate\n
- 25g milk chocolate\n
- 25g white chocolate\n
</string>

    <string name="cake1_instructions">1. Heat oven to 190C/170C fan/gas 5.\n Butter the base and sides of\n
        two 20cm round sandwich tins and\n line the bases with baking\n parchment.\n\n
    2. In a large bowl, beat together\n 200g golden caster sugar, 200g\n softened unsalted butter, 4 large eggs,\n
        200g self-raising flour, 2 tbsp\n cocoa powder, 1 tsp baking powder,\n ½ tsp vanilla extract, 2 tbsp\n
        milk and a pinch of salt\n until pale.\n\n
        3. Divide the mixture between the\n prepared tins. Bake for 20 mins\n or until a skewer inserted into\n
        the centre of the cake comes\n out clean.\n\n
        4. Leave to cool in the tin\n for 10 mins, then turn out\n onto a wire rack to cool\n completely.\n\n
        5. For the buttercream, put 100g\n chopped milk chocolate in a\n  heatproof bowl and melt in the\n
        microwave, stirring every 30 secs.\n Leave the melted chocolate to cool\n for 5 mins.\n\n
        6. Mash 200g softened butter and\n 400g icing sugar together with\n a fork, then switch to a\n
        wooden spoon or electric beaters,\n if you have them.\n\n
        7. Sift in 5 tbsp cocoa powder\n with a pinch of salt and\n pour in the melted chocolate\n
        and 2 tbsp milk. Mix again\n until smooth.\n\n
        8. On a cake stand or large\n plate, sandwich the cakes together\n with half of the buttercream,\n
        then spread the rest on top.\n Decorate with chocolate shards, if\n you like.\n\n
        9. To make chocolate shards: melt\n 50g dark chocolate and pour it\n onto a tray lined with baking\n parchment or foil.\n\n
        10. Now melt 25g milk chocolate\n and 25g white chocolate and\n drizzle them over the dark\n chocolate before it sets.\n\n
        11. Shake the tray gently to level\n the mixture then leave to set\n somewhere cool. Chop into shards.\n\n
</string>

    <string name="snack1_descripton">This Chicken Burger recipe will be \nthe best companion for your \nsnack time.</string>
    <string name="snack1_ingredients">- 4 skinless, boneless chicken\n\t\tbreasts\n
- 4 large burger buns, sliced in half\n
- lettuce, tomato and red onion,\n\t\tto serve\n\n
For the sauce and marinade\n
- 4 tbsp tomato ketchup\n
- 4 tbsp brown sauce\n
- splash chilli sauce (optional)\n
- 2 tsp clear honey\n
- 2 garlic cloves, crushed
</string>

    <string name="snack1_instructions">1. Make the sauce and marinade\n by mixing everything together in\n
        a large bowl, then put a\n few spoonfuls aside. Slice halfway\n into the thickest part of\n
        each breast and open it up\n like a book. Flatten down\n slightly with your hand, then toss\n
        in the bowlful of marinade\n to coat. Chill for as little,\n or as long, as you have\n
        time to.\n\n
        2. Barbecue the chicken for about\n 10 mins until completely cooked\n through, turning so it doesn’t\n
        burn but is nicely charred\n and sticky. Cook the bacon\n at the same time until crisp,\n if using, and toast the buns.\n
        Assemble the burgers with lettuce,\n slices of tomato, onion and\n the reserved sauce on the\n side for dolloping on top.\n\n
</string>

    <string name="drink1_description">No one can say no to\n a cup of hot chocolate smoothie.</string>

    <string name="drink1_ingredients">- 1 cup Eggnog\n
- 1 cup Whole Milk\n
- 2 tablespoon Unsweetened\n\t\t Cocoa Powder\n
- 2 tablespoons Granulated Sugar\n
- 1 teaspoon Vanilla Extract\n
- ¼ teaspoon Ground Nutmeg\n
- ¼ teaspoon Salt\n
- Whipped Cream (for topping,\n\t\t optional)\n
- Ground Cinnamon (or nutmeg\n\t\t for topping, optional)
</string>

    <string name="drink1_instructions">1. Add all ingredients to a\n small saucepan and whisk together\n until combined.\n\n
2. Cook over medium-high heat\n until the sugar has dissolved\n completely and it barely comes\n to a light simmer.\n\n
3. Remove the saucepan from heat\n and divide between two mugs.\n\n
4. Top with whipped cream and\n cinnamon or nutmeg if desired.\n\n
</string>

    <string name="ingredients1">
        - 1 pound beef top sirloin steak, cut into 1-inch cubes\n
- 6 tablespoons sesame ginger salad dressing, divided\n
- 1 tablespoon reduced-sodium soy sauce\n
- 2 cups chopped fresh pineapple\n
- 2 medium apples, chopped\n
- 1 tablespoon sweet chili sauce\n
- 1 tablespoon lime juice\n
- 1/4 teaspoon pepper\n
- 1 tablespoon sesame seeds, toasted\n
    </string>

    <string name="instructions1">
        1. In a bowl, toss beef with\n 3 tablespoons dressing and soy sauce;\n let stand 10 minutes. Meanwhile, in\n a large bowl, combine pineapple, apples,\n chili sauce, lime juice and pepper;\n toss to combine.\n\n
2. Thread beef onto 4 metal or\n soaked wooden skewers; discard remaining marinade.\n
        3. Grill kabobs, covered, over medium heat\n or broil 4 in. from heat\n until desired doneness, 7-9 minutes, turning\n occasionally; brush generously with remaining dressing\n during the last 3 minutes.\n\n
        4. Sprinkle with sesame seeds. Serve with\n pineapple mixture.\n\n
    </string>

    <string name="ingredients2">
        - 1 pound extra-lean ground beef (95% lean)\n
- 1 large onion, chopped\n
- 1-1/4 teaspoons chili powder\n
- 1 teaspoon dried oregano\n
- 1/4 teaspoon salt\n
- 1 can (14-1/2 ounces) diced tomatoes, undrained\n
- 1 can (8 ounces) tomato sauce\n
- 1 cup fresh or frozen corn\n
- 1/2 cup water\n
- 2/3 cup uncooked elbow macaroni\n
- 1/2 cup shredded reduced-fat cheddar cheese\n
    </string>

    <string name="instructions2">
        1. In a large nonstick skillet, cook\n beef with onion over medium-high heat\n until no longer pink, 5-7\n minutes; crumble meat.\n\n
2. Stir in seasonings, tomatoes, tomato sauce,\n corn and water; bring to a\n boil. \n\n
        3. Stir in macaroni. Reduce heat; simmer,\n covered, until macaroni is tender,\n 15-20 minutes, stirring occasionally. \n\n
        4. Sprinkle with cheese.\n\n
    </string>

    <string name="ingredients3">
        - 1 pound medium potatoes, cubed\n
- 1/2 cup water\n
- 1 pound ground beef\n
- 1 medium onion, chopped\n
- 1 can (15-1/2 ounces) chili starter\n
- 1 cup frozen peas\n
- 2 tablespoons minced fresh parsley\n
- 1/4 teaspoon salt\n
- Sour cream, optional\n
    </string>

    <string name="instructions3">
        1. Place potatoes and water in a\n microwave-safe dish.\n\n
        2. Cover and microwave on high for\n 7 minutes or until tender.\n\n
3. Meanwhile, in a large skillet, cook\n beef and onion over medium heat\n until meat is no longer pink;\n drain.\n\n
        4. Drain potatoes and add to the\n skillet. Stir in the chili starter,\n peas, parsley and salt.\n\n
        5. Bring to a boil. Reduce heat;\n simmer, uncovered, for 5 minutes.\n\n
        6. Serve with sour cream if desired.\n\n

    </string>

    <string name="ingredients4">
        - 1 pound beef stew meat (1-1/4-inch pieces)\n
- 3/4 pound potatoes (about 2 medium), cut into 3/4-inch cubes\n
- 2 cups frozen corn (about 10 ounces), thawed\n
- 2 medium carrots, cut into 1/2-inch slices\n
- 1 medium onion, chopped\n
 - 2 garlic cloves, minced\n
- 1-1/2 teaspoons dried oregano\n
- 1 teaspoon ground cumin\n
- 1/2 teaspoon salt\n
- 1/4 teaspoon crushed red pepper flakes\n
- 2 cups beef stock\n
- 1 can (10 ounces) diced tomatoes and green chiles\n
- Optional: Sour cream and tortilla chips\n

    </string>
    <string name="instructions4">
        1. In a 6-qt. electric pressure cooker,\n combine first 12 ingredients.\n\n
        2. Lock lid; close pressure-release valve.\n Adjust to pressure-cook on high\n for 15 minutes.\n\n
        3. Allow pressure to naturally release for\n 10 minutes, then quick-release\n any remaining pressure.\n\n
4. If desired, serve with sour cream\n and chips.\n\n

    </string>

    <string name="ingredients5">
- 1-1/2 cups uncooked whole wheat penne\n pasta\n
- 3/4 pound lean ground beef (90% lean)\n
- 2 tablespoons finely chopped onion\n
- 1 can (14-1/2 ounces) \nno-salt-added diced tomatoes\n
- 2 tablespoons dill pickle relish\n
- 2 tablespoons prepared mustard\n
- 2 tablespoons ketchup\n
- 1 teaspoon steak seasoning\n
- 1/4 teaspoon seasoned salt\n
- 3/4 cup shredded reduced-fat\n cheddar cheese\n
- Chopped green onions, optional

    </string>
    <string name="instructions5">
1. Cook pasta according to package directions.\n\n
        2. Meanwhile, in a large skillet,\n cook beef and onion over medium\n heat until meat is no longer\n pink; drain.\n\n
        3. Drain pasta; add to meat mixture.\n\n
4. Stir in the tomatoes, relish,\n mustard, ketchup, steak seasoning\n and seasoned salt.\n\n
        5. Bring to a boil. Reduce heat;\n simmer, uncovered, for 5 minutes.\n\n
6. Sprinkle with cheese.\n\n
        7. Remove from the heat; cover and\n let stand until cheese is melted.\n\n
        8. Garnish with green onions if desired.\n\n
    </string>
</resources>