<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DrinkRecipe_1">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView28"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="24dp"
                    android:fontFamily="@font/courgette"
                    android:text="Eggnog Hot Chocolate"
                    android:textAlignment="textStart"
                    android:textColor="#663100"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView31"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:fontFamily="sans-serif"
                    android:text="@string/drink1_description"
                    android:textAlignment="textStart"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="normal"
                    app:layout_constraintStart_toStartOf="@+id/textView28"
                    app:layout_constraintTop_toBottomOf="@+id/textView28" />

                <TextView
                    android:id="@+id/textView32"
                    android:layout_width="140dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="32dp"
                    android:background="@drawable/bg_shape_3"
                    android:drawableLeft="@drawable/time_1"
                    android:elevation="20dp"
                    android:fontFamily="sans-serif"
                    android:paddingLeft="12dp"
                    android:paddingTop="5dp"
                    android:text="Time\n15mnt"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@+id/textView31"
                    app:layout_constraintTop_toBottomOf="@+id/textView31" />

                <TextView
                    android:id="@+id/textView33"
                    android:layout_width="140dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="24dp"
                    android:background="@drawable/bg_shape_3"
                    android:drawableLeft="@drawable/type"
                    android:elevation="20dp"
                    android:fontFamily="sans-serif"
                    android:paddingLeft="12dp"
                    android:paddingTop="5dp"
                    android:text="TYPE\nEasy"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="@+id/textView32"
                    app:layout_constraintStart_toStartOf="@+id/textView32"
                    app:layout_constraintTop_toBottomOf="@+id/textView32" />

                <TextView
                    android:id="@+id/textView34"
                    android:layout_width="140dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="24dp"
                    android:background="@drawable/bg_shape_3"
                    android:drawableLeft="@drawable/favourite"
                    android:elevation="20dp"
                    android:fontFamily="sans-serif"
                    android:paddingLeft="12dp"
                    android:paddingTop="5dp"
                    android:text="Add to\nFavourite"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="@+id/textView33"
                    app:layout_constraintStart_toStartOf="@+id/textView33"
                    app:layout_constraintTop_toBottomOf="@+id/textView33" />

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/imageView13"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    app:layout_constraintBottom_toBottomOf="@+id/textView34"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.448"
                    app:layout_constraintStart_toEndOf="@+id/textView33"
                    app:layout_constraintTop_toTopOf="@+id/textView32"
                    app:layout_constraintVertical_bias="0.714"
                    app:shapeAppearanceOverlay="@style/circular"
                    app:srcCompat="@drawable/drink1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="24dp"
                    android:fontFamily="sans-serif"
                    android:lineSpacingExtra="5dp"
                    android:text="@string/drink1_instructions"
                    android:textAlignment="textStart"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="normal"
                    app:layout_constraintStart_toStartOf="@+id/constraintLayout10"
                    app:layout_constraintTop_toBottomOf="@+id/constraintLayout10" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraintLayout10"
                    android:layout_width="345dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="40dp"
                    android:background="@drawable/bg_shape_2"
                    app:layout_constraintEnd_toEndOf="@+id/constraintLayout9"
                    app:layout_constraintStart_toStartOf="@+id/constraintLayout9"
                    app:layout_constraintTop_toBottomOf="@id/textView36">

                    <TextView
                        android:id="@+id/textView38"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="24dp"
                        android:fontFamily="@font/libre_baskerville"
                        android:text="Instructions"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="22sp"
                        android:textStyle="bold|italic"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/imageView15"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/imageView15"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginStart="16dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/fork_and_spoon_1" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <TextView
                    android:id="@+id/textView36"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="24dp"
                    android:fontFamily="sans-serif"
                    android:lineSpacingExtra="15dp"
                    android:text="@string/drink1_ingredients"
                    android:textAlignment="textStart"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="normal"
                    app:layout_constraintStart_toStartOf="@+id/constraintLayout9"
                    app:layout_constraintTop_toBottomOf="@+id/constraintLayout9" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraintLayout9"
                    android:layout_width="345dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="40dp"
                    android:layout_marginEnd="8dp"
                    android:background="@drawable/bg_shape_2"
                    app:layout_constraintEnd_toEndOf="@+id/imageView13"
                    app:layout_constraintStart_toStartOf="@+id/textView34"
                    app:layout_constraintTop_toBottomOf="@+id/textView34">

                    <ImageView
                        android:id="@+id/imageView14"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginStart="16dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/fork_and_spoon_1" />

                    <TextView
                        android:id="@+id/textView35"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="24dp"
                        android:fontFamily="@font/libre_baskerville"
                        android:text="Ingredients"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="22sp"
                        android:textStyle="bold|italic"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/imageView14"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>